<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.trafficsigntest.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_test"
        android:name="com.example.trafficsigntest.ui.test.TestFragment"
        android:label="@string/menu_test"
        tools:layout="@layout/fragment_test" />

    <fragment
        android:id="@+id/nav_scores"
        android:name="com.example.trafficsigntest.ui.scores.ScoresFragment"
        android:label="@string/menu_scores"
        tools:layout="@layout/fragment_scores" />
</navigation>